Feature: Announcements and Card updates (#5)
* Install WorkingNYC v0.0.1-41 and update styles

* Only show program card status line if there is a status

* Update homepage layout wrapping

* Update programs archive layout wrapping

* Add debug method

* Add id to unique targets in web share

* Rename program card template

* Implement homepage announcements

Revisions:

* Update patterns lib version and styles

* Remove extra div in utility nav template

* Add sticky div to single templates for utility nav

* Fix side effects of pattern layout utility updates

* Update announcement card to use triangle alert

--- a/wp-content/themes/workingnyc/views/components/filters.twig
+++ b/wp-content/themes/workingnyc/views/components/filters.twig
@@ -11,11 +11,11 @@
 		</div>
 
 		<form class="layout-rows-gutter" tabindex="-1">
-		
+
     	<fieldset tabindex="-1" v-for="(filter, index) in filters">
 				<legend class="h4 block w-full m-0 py-2 ps-2 text-alt sticky top-0 z-10 bg-scale-1" tabindex="-1">v{ labels[index] }</legend>
-				<div class="layout-rows tablet:layout-two-columns-gutter">
-          <label class="option w-full" tabindex="-1" v-for="term in filter" gtm-data="test">
+				<div class="layout-rows tablet:layout-col-2-gap-1-1">
+          <label class="option w-full mb-3 tablet:mb-0" tabindex="-1" v-for="term in filter" gtm-data="test">
 						<input type="checkbox" :id="term.slug" :value="term" tabindex="-1" v-model="checkedFilters">
 						<span class="option__base">
 							<svg aria-hidden="true" class="option__graphic">
@@ -26,7 +26,7 @@
 					</label>
 				</div>
 			</fieldset>
-			
+
 			<div class="py-2 sticky bottom-0 z-10 text-center bg-scale-1">
 				<button aria-controls="aria-c-filter" aria-expanded="false" class="btn btn-secondary w-full" data-js="dropdown" tabindex="-1">{{ __('Close and see', 'WNYC-Programs') }} v{ totalPosts } {{ __('programs', 'WNYC-Programs') }}</button>
 			</div>
