--- a/wp-content/themes/workingnyc/views/components/web-share.twig
+++ b/wp-content/themes/workingnyc/views/components/web-share.twig
@@ -1,5 +1,7 @@
+{% set id = (this.id) ? this.id : fn('uniqid') %}
+
 <div class='c-web-share'>
-  <button aria-controls="aria-c-web-share-fallback" aria-expanded="false" class="btn btn-small btn-primary m-0" data-js="web-share" data-web-share='{{ this.share|json_encode }}'>
+  <button aria-controls="aria-c-web-share-fallback-{{ id }}" aria-expanded="false" class="btn btn-small btn-primary m-0" data-js="web-share" data-web-share='{{ this.share|json_encode }}'>
     <svg class="c-web-share__icon icon-wnyc-ui">
       <use xlink:href="#icon-wnyc-ui-share-2"></use>
     </svg>
@@ -7,10 +9,10 @@
     <span>{{__('Share', 'WNYC')}}</span>
   </button>
 
-  <div aria-hidden="true" class="c-web-share__fallback color-card hidden right-0" id="aria-c-web-share-fallback" role="region">
+  <div aria-hidden="true" class="c-web-share__fallback color-card hidden {{ this.class }}" id="aria-c-web-share-fallback-{{ id }}" role="region">
     <div class="c-web-share__fallback-body">
       <div class="flex mb-1 items-center flex-row-reverse">
-        <button aria-controls="aria-c-web-share-fallback" aria-expanded="false" class="btn btn-primary btn-small m-0" data-js="web-share" tabindex="-1"> 
+        <button aria-controls="aria-c-web-share-fallback-{{ id }}" aria-expanded="false" class="btn btn-primary btn-small m-0" data-js="web-share" tabindex="-1">
           <svg aria-hidden="true" class="icon-wnyc-ui" tabindex="-1">
             <use xlink:href="#icon-wnyc-ui-x"></use>
           </svg>
@@ -20,11 +22,11 @@
       </div>
 
       <div class="c-web-share__input input">
-        <input data-copy-target="web-share-url" id="web-share-url" name="web-share-url" tabindex="-1" type="text" value="{{this.share.url}}" />
+        <input data-copy-target="web-share-url-{{ id }}" id="web-share-url" name="web-share-url" tabindex="-1" type="text" value="{{this.share.url}}" />
       </div>
 
       <div class="c-web-share__items">
-        <button aria-pressed="false" class="c-web-share__item c-web-share__copy btn btn-small btn-primary" data-copy="web-share-url" data-js="copy" tabindex="-1">
+        <button aria-pressed="false" class="c-web-share__item c-web-share__copy btn btn-small btn-primary" data-copy="web-share-url-{{ id }}" data-js="copy" tabindex="-1">
           <svg class="icon icon-wnyc-ui">
             <use xlink:href="#icon-wnyc-ui-copy"></use>
           </svg>
