Remove underline from program archive title

--- a/wp-content/themes/workingnyc/views/programs/archive.twig
+++ b/wp-content/themes/workingnyc/views/programs/archive.twig
@@ -48,7 +48,7 @@
               <header class="c-card__header">
                 <h2 class="c-card__title mt-0 mb-2">
                   <a :href="postUrl(post.slug)">
-                    <span class="underline" data-program="plain-language-name">v{ post.acf.program_title }</span>
+                    <span data-program="plain-language-name">v{ post.acf.program_title }</span>
                   </a>
                 </h2>
                 <h3 class="c-card__subtitle text-alt mb-1">
