--- a/wp-content/themes/workingnyc/views/components/web-share.twig
+++ b/wp-content/themes/workingnyc/views/components/web-share.twig
@@ -1,6 +1,6 @@
 {% set id = (this.id) ? this.id : fn('uniqid') %}
 
-<div class='c-web-share'>
+<div class='c-web-share {{ this.class }}'>
   <button aria-controls="aria-c-web-share-fallback-{{ id }}" aria-expanded="false" class="btn btn-small btn-primary m-0" data-js="web-share" data-web-share='{{ this.share|json_encode }}'>
     <svg class="c-web-share__icon icon-wnyc-ui">
       <use xlink:href="#icon-wnyc-ui-share-2"></use>
@@ -26,7 +26,7 @@
       </div>
 
       <div class="c-web-share__items">
-        <button aria-pressed="false" class="c-web-share__item c-web-share__copy btn btn-small btn-primary" data-copy="web-share-url-{{ id }}" data-js="copy" tabindex="-1">
+        <button aria-pressed="false" class="c-web-share__item c-web-share__copy btn btn-small btn-primary mx-0" data-copy="web-share-url-{{ id }}" data-js="copy" tabindex="-1">
           <svg class="icon icon-wnyc-ui">
             <use xlink:href="#icon-wnyc-ui-copy"></use>
           </svg>
@@ -38,7 +38,7 @@
           <span>{{ __('Copy URL', 'WNYC') }}</span>
         </button>
 
-        <a class="c-web-share__item btn btn-small btn-primary" href="https://www.facebook.com/sharer/sharer.php?u={{this.share.url|url_encode}}" tabindex="-1" target="_blank">
+        <a class="c-web-share__item btn btn-small btn-primary mx-0" href="https://www.facebook.com/sharer/sharer.php?u={{this.share.url|url_encode}}" tabindex="-1" target="_blank">
           <svg class="icon-wnyc-ui">
             <use xlink:href="#icon-wnyc-ui-facebook"></use>
           </svg>
@@ -46,7 +46,7 @@
           <span>{{ __('Facebook', 'WNYC') }}</span>
         </a>
 
-        <a class="c-web-share__item btn btn-small btn-primary" href="https://twitter.com/intent/tweet?text={{this.share.text|url_encode}}%20{{this.share.url|url_encode}}" tabindex="-1" target="_blank">
+        <a class="c-web-share__item btn btn-small btn-primary mx-0" href="https://twitter.com/intent/tweet?text={{this.share.text|url_encode}}%20{{this.share.url|url_encode}}" tabindex="-1" target="_blank">
           <svg class="icon-wnyc-ui">
             <use xlink:href="#icon-wnyc-ui-twitter"></use>
           </svg>
