--- a/wp-content/themes/workingnyc/views/programs/single.twig
+++ b/wp-content/themes/workingnyc/views/programs/single.twig
@@ -41,7 +41,7 @@
                     'link': '/programs'
                   },
                   {
-                    'label': post.program_title,
+                    'label': post.title,
                     'link': ''
                   }
                 ]
