--- a/wp-content/themes/workingnyc/views/programs/archive.twig
+++ b/wp-content/themes/workingnyc/views/programs/archive.twig
@@ -52,11 +52,11 @@
                   </a>
                 </h2>
                 <h3 class="c-card__subtitle text-alt mb-1">
-                <b data-program="title" v-html="post.title"></b><span data-program="title"> {{ __('by', 'WNYC-Programs') }} </span><span v-html="post.acf.program_agency"></span>
+                <b data-program="title" v-html="post.title"></b><span data-program="title"> {{ __('by', 'WNYC-Programs') }} </span><span data-program="title" v-html="post.acf.program_agency"></span>
                 </h3>
               </header>
               <div class="c-card__body">
-                <p class="c-card__status flex items-center" v-if="post.recruitment_status.length > 0">
+                <p class="c-card__status flex items-center" v-if="post.recruitment_status[0].slug=='actively-recruiting'">
                   <mark class="badge status-alt me-2" data-program="recruiting">
                     v{ post.recruitment_status[0].name }
                   </mark>
