--- a/wp-content/themes/workingnyc/views/objects/ie-warning.twig
+++ b/wp-content/themes/workingnyc/views/objects/ie-warning.twig
@@ -1,4 +1,4 @@
-<div id="ie-warning" class="page-max wrap pt-3 hidden">
+<div id="ie-warning" class="page-max wrap pt-3 hidden" aria-hidden="true">
   <article class="c-alert color-status-primary mb-5" data-js="alert-info">
     <div class="c-alert__graphic">
       <svg aria-hidden="true" class="icon-wnyc-ui">
