--- a/wp-content/themes/workingnyc/views/programs/single.twig
+++ b/wp-content/themes/workingnyc/views/programs/single.twig
@@ -212,10 +212,12 @@
       {# Suggest Update #}
       <section class="layout-content bg-scale-1" id="suggest-update">
         <div class="pt-2 pb-3 wrap">
-          <article class="c-alert c-alert__graphic items-center mr-0" data-js="alert-help">
-            <svg aria-hidden="true" class="icon-wnyc-ui mr-2">
-              <use xlink:href="#help-circle"></use>
-            </svg>
+          <article class="c-alert border-l-8 border-mid-0 items-center mr-0" data-js="alert-help">
+            <div class="c-alert__graphic border-l-0">
+              <svg aria-hidden="true" class="icon-wnyc-ui mr-2">
+                <use xlink:href="#help-circle"></use>
+              </svg>
+            </div>
 
             <div class="c-alert__body">
               <b class="text-alt mb-1">
