setting tabindex and aria-hidden on ie-warning; updating status conditional on single program

--- a/wp-content/themes/workingnyc/views/programs/single.twig
+++ b/wp-content/themes/workingnyc/views/programs/single.twig
@@ -47,7 +47,7 @@
                 ]
               }%}
 
-            {% if post.terms('recruitment_status') %}
+            {% if post.terms('recruitment_status')[0].slug == 'actively-recruiting' %}
               <p>
                 <mark class="badge status-alt me-2" data-program="recruiting">
                   {{post.terms('recruitment_status')[0]}}
