modifying ie conditional

--- a/wp-content/themes/workingnyc/views/base.twig
+++ b/wp-content/themes/workingnyc/views/base.twig
@@ -19,15 +19,17 @@
 
     {# CSS polyfill for IE #}
     <script type="text/javascript">
+      if(/MSIE \d|Trident.*rv:/.test(navigator.userAgent)){
+        document.write('<script src="https:\/\/cdn.jsdelivr.net\/gh\/nuxodin\/ie11CustomProperties@4.1.0\/ie11CustomProperties.min.js"><\/script>');
+        document.write('<style>.o-navigation{display:block !important;}.c-card{display:block !important;}.c-utility{display:block !important;}<\/style>');
+      }
+
       document.addEventListener("DOMContentLoaded", function(){
         const warning = document.getElementById("ie-warning");
         const links = warning.querySelectorAll('a')
         let tabindex = "-1";
         
         if(/MSIE \d|Trident.*rv:/.test(navigator.userAgent)){
-          document.write('<script src="https:\/\/cdn.jsdelivr.net\/gh\/nuxodin\/ie11CustomProperties@4.1.0\/ie11CustomProperties.min.js"><\/script>');
-          document.write('<style>.o-navigation{display:block !important;}.c-card{display:block !important;}.c-utility{display:block !important;}<\/style>');
-
           warning.classList.remove("hidden");
           warning.setAttribute("aria-hidden", "false");
           tabindex="0";
@@ -37,6 +39,7 @@
           link.setAttribute("tabindex", tabindex)
         });
       });
+
     </script>
 
     {{ function('wp_head') }}
