Remove extra spacing at end of alert box icons

--- a/wp-content/themes/workingnyc/views/programs/archive.twig
+++ b/wp-content/themes/workingnyc/views/programs/archive.twig
@@ -112,7 +112,7 @@
             <article class="c-card border-l-4 border-mid-0">
               <div class="c-alert items-center h-full w-full" data-js="alert-help" v-if="totalVisible > 0 && totalVisible == totalPosts">
                 <div class="c-alert__graphic border-l-0">
-                  <svg aria-hidden="true" class="icon-wnyc-ui mr-2">
+                  <svg aria-hidden="true" class="icon-wnyc-ui">
                     <use xlink:href="#help-circle"></use>
                   </svg>
                 </div>
