--- a/wp-content/themes/workingnyc/views/programs/single.twig
+++ b/wp-content/themes/workingnyc/views/programs/single.twig
@@ -214,7 +214,7 @@
         <div class="pt-2 pb-3 wrap">
           <article class="c-alert border-l-8 border-mid-0 items-center mr-0" data-js="alert-help">
             <div class="c-alert__graphic border-l-0">
-              <svg aria-hidden="true" class="icon-wnyc-ui mr-2">
+              <svg aria-hidden="true" class="icon-wnyc-ui">
                 <use xlink:href="#help-circle"></use>
               </svg>
             </div>
