Support for overriding web share text

--- a/wp-content/themes/workingnyc/views/programs/single.twig
+++ b/wp-content/themes/workingnyc/views/programs/single.twig
@@ -19,7 +19,7 @@
           ],
           web_share: {
             'title': post.program_title,
-            'text': post.get_field('program_intro')|striptags,
+            'text': (post.web_share_text) ? post.web_share_text : post.get_field('program_intro')|striptags,
             'url': fn('wp_get_shortlink')
           }
         } %}
